--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-notification-alert": "0.0.13",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "sass": "1.62.1"
+    "react-toastify": "^9.1.3",
+    "react-toastr": "^3.0.0",
+    "sass": "1.62.1",
+    "sweetalert2": "^11.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
