--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "datatables.net-bs4": "^1.13.8",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
-    "react": ">=16.8.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "3.3.0",
-    "react-dom": ">=16.8.0",
+    "react-dom": "^18.2.0",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "react-toastr": "^3.0.0",
     "sass": "1.62.1",
@@ -34,10 +34,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
   },
   "browserslist": [
     ">0.2%",
