--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "black-dashboard-react",
+  "name": "metakosmos",
   "version": "1.2.2",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/black-dashboard-react/#/admin/dashboard",
+  "homepage": "build",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
     "bootstrap": "4.6.2",
