added home page

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,8 @@
 <IfModule mod_rewrite.c>
     Options -MultiViews
     RewriteEngine On
-    RewriteBase /build/
+    RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^ index.html [QSA,L]
 </IfModule>
