--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "metakosmos",
+  "name": "kosmosuit",
   "version": "1.2.2",
   "private": true,
-  "homepage": "build",
+  "homepage": "https://kosmosuit.azurewebsites.net",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
     "bootstrap": "4.6.2",
@@ -16,6 +16,7 @@
     "react-chartjs-2": "3.3.0",
     "react-dom": "^18.2.0",
     "react-notification-alert": "0.0.13",
+    "react-rangeslider": "^2.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
